Fixing elastic beanstalk deployment

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elastic-github-test",
   "version": "1.0.0",
   "description": "",
-  "main": "elastic-github/public/index.html",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/NainGalvan/elastic-github-test/issues"
   },
-  "homepage": "https://github.com/NainGalvan/elastic-github-test#readme"
+  "homepage": "https://github.com/NainGalvan/elastic-github-test#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
